[package]
name = "sbwsig"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
chrono = { version = "0.4.26", features = ["serde"] }
color-eyre = "0.6.3"
derivative = "2.2.0"
futures = "0.3.28"
log = "0.4.22"
rand = "0.8.5"
reqwest = "0.11.23"
scc = "2.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shuttle-axum = { version = "0.51.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.51.0"
tokio = "1.28.2"
tokio-stream = "0.1.17"
tower-http = { version = "0.5.0", features = ["fs"] }
